# Laymann

./: .gitignore  .gitmodules  CMakeLists.txt
data/plan/: l_singleStudio01.json  l_singleStudio02.json  l_twoBedroomApartment03.json  room_box.json
src/core/: data.h  math.h  processor.h  utils.h
src/shaders/: fs_basic.sc  fs_grid.sc  varying.def.sc  vs_basic.sc  vs_grid.sc
src/system/: files.cpp  files.h
src/test/: bgfx_test.cpp
src/utils/: planLoader.cpp  planLoader.h
